<resources>
    <string name="app_name">风芝记事</string>
    <string name="action_skin">皮肤</string>
    <string name="action_help">帮助</string>
    <string name="action_about">关于</string>
    <string name="action_key">密码</string>
    <string name="action_say">感悟</string>
    <string name="action_font">字体</string>
    <string name="action_exit">退出</string>
    <string name="hello_world">就让往事随风~</string>
    <color name="gray">#F0F0F0</color>
    <color name="darkgray">#777777</color>
    <color name="middlegray">#D7D7D7</color>
    <color name="red">#ff3300</color>
    <color name="white">#ffffff</color>
    <color name="darkblue">#0066ff</color>
    <string name="back">欢迎回来~</string>
    <color name="blue">#00bbff</color>
    <string name="mode_btn">模式</string>
    <string name="sort_btn">排序</string>
    <string name="add_btn">添加</string>
    <string name="grid_mode">网格</string>
    <string name="list_mode">列表</string>
    <string name="back_btn">返回</string>
    <string name="lock_btn">加锁</string>
    <string name="now_note">旧的记事</string>
    <string name="new_note">新的记事</string>
    <string name="content_hint">写点什么呢？</string>
    <string name="save_btn">保存</string>
    <string name="zero_txt">0</string>
    <string name="grid_now">网格模式开启</string>
    <string name="list_now">列表模式开启</string>
    <string name="desc_now">递减排序开启</string>
    <string name="asc_now">递增排序开启</string>
    <string name="lock_now">记事已加锁</string>
    <string name="unlock_now">记事已解锁</string>
    <string name="title_hint">标题</string>
    <string name="delete_btn">删除</string>
    <string name="limit_count">余额</string>
    <string name="limit_time">限时</string>
    <string name="alert_hint">提示</string>
    <string name="back_hint">当前记事还未保存，是否保存？</string>
    <string name="delete_note">删除记事</string>
    <string name="delete_desc">现在删除记事吗？</string>
    <string name="note_deleted">记事已删除</string>
    <string name="about_me">关于</string>
    <string name="word_yes">是</string>
    <string name="word_no">否</string>
    <string name="word_time">天</string>
    <string name="word_count">次</string>
    <string name="word_confirm">确定</string>
    <string name="word_cancel">取消</string>
    <string name="word_today">今天</string>
    <string name="word_ago">天前</string>
    <string name="word_my">我的</string>
    <string name="word_said">说过：</string>
    <string name="note_saved">记事已保存</string>
    <string name="note_null">写点什么吧~</string>
    <string name="exit_hint">再按一次退出风知记事</string>
    <string name="choose_skin">选择皮肤颜色</string>
    <string name="now_skin">正在使用该皮肤</string>
    <string name="limit_length">至少6位</string>
    <string name="key_txt">密码</string>
    <string name="enter_key">新密码</string>
    <string name="again_key">请确认</string>
    <string name="old_key">原密码</string>
    <string name="set_key">设置密码</string>
    <string name="reset_key">修改密码</string>
    <string name="cancel_key">取消密码</string>
    <string name="wrong_key">密码错误</string>
    <string name="key_success">请记住新密码：</string>
    <string name="key_canceled">密码已取消</string>
    <string name="delete_yes">删除记事</string>
    <string name="delete_no">取消删除</string>
    <string name="gone_time">保存天数</string>
    <string name="gone_count">阅读次数</string>
    <string name="gone_btn">放飞记事</string>
    <string name="leave_btn">不想放飞</string>
    <string name="confirm_btn">确认修改</string>
    <string name="clear_btn">×</string>
    <string name="num_zero">0</string>
    <string name="search_btn">搜索记事</string>
    <string name="clear_note">清空内容</string>
    <string name="clear_cancel">取消清空</string>
    <string name="refresh_txt">记事已刷新</string>
    <string name="left_txt">剩余</string>
    <string name="about_txt">风芝记事 v1.0\r\n\r\n作者：魏谞臣\r\n邮箱：519462367@qq.com\r\n\r\n欢迎交流，谢谢支持！</string>
    <color name="orange">#f39629</color>
    <color name="yellow">#e8dd34</color>
    <color name="green">#43d562</color>
    <color name="cyan">#5ce0d8</color>
    <color name="purple">#a959d3</color>
    <color name="pink">#ff33cc</color>
    <color name="transparent">#00000000</color>
</resources>
