<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/back_btn"
            android:padding="8dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/title_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/new_note"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/lock_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/lock_btn"
            android:padding="8dp"
            android:src="@drawable/lock" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/length_txt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/num_zero"
            android:textColor="@color/darkgray"
            android:visibility="gone" />

        <EditText
            android:id="@+id/title_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/title_hint"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/transparent"
            android:textColorHint="@color/darkgray"
            android:textSize="18sp" />

        <Button
            android:id="@+id/clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/clear_btn"
            android:textColor="@color/darkgray"
            android:textSize="16sp"
            android:visibility="gone" />

    </LinearLayout>

    <EditText
        android:id="@+id/note_txt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="left|top"
        android:hint="@string/content_hint"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textColor="@color/transparent"
        android:textColorHint="@color/darkgray"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/gone_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/gone_btn"
            android:padding="8dp"
            android:src="@drawable/gone" />

        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/save_btn"
            android:padding="8dp"
            android:src="@drawable/save" />
    </LinearLayout>

</LinearLayout>