<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow>

        <TextView
            android:id="@+id/gone_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/gone_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </TableRow>

    <TableRow>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:contentDescription="@string/word_yes"
            android:padding="1dp"
            android:src="@drawable/yes" />

        <Button
            android:id="@+id/delete_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/transparent"
            android:text="@string/delete_yes"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </TableRow>

    <TableRow>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:contentDescription="@string/word_no"
            android:padding="1dp"
            android:src="@drawable/no" />

        <Button
            android:id="@+id/delete_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/transparent"
            android:text="@string/delete_no"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </TableRow>


</TableLayout>