<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.wxc.fengzhinote.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/mode_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/mode_btn"
            android:padding="8dp"
            android:src="@drawable/grid" />

        <TextView
            android:id="@+id/title_main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/sort_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/sort_btn"
            android:padding="8dp"
            android:src="@drawable/asc" />
    </LinearLayout>

    <TextView
        android:id="@+id/refresh_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/refresh_txt"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/notes_frm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/gray">

        <ListView
            android:id="@+id/notes_lis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:listSelector="@null"
            android:scrollbars="none"
            android:visibility="gone" />

        <GridView
            android:id="@+id/notes_grd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:gravity="center"
            android:horizontalSpacing="2dp"
            android:listSelector="@null"
            android:scrollbars="none"
            android:stretchMode="columnWidth"
            android:verticalSpacing="2dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/search_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="14dp"
            android:hint="@string/search_btn"
            android:inputType="text"
            android:paddingBottom="5dp"
            android:paddingLeft="8dp"
            android:paddingTop="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:visibility="invisible" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/back_btn"
            android:padding="8dp"
            android:src="@drawable/menu" />

        <ImageButton
            android:id="@+id/add_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/add_btn"
            android:padding="8dp"
            android:src="@drawable/add" />

        <ImageButton
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/search_btn"
            android:padding="8dp"
            android:src="@drawable/search" />
    </LinearLayout>
</LinearLayout>
