<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow>

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/gone_time"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/time_txt"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/txt_bg"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="4"
            android:padding="2dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/gone_count"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/count_txt"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/txt_bg"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="4"
            android:padding="2dp"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/gone_cancel"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/transparent"
            android:text="@string/leave_btn"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/gone_confirm"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/transparent"
            android:text="@string/gone_btn"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </TableRow>

</TableLayout>